# vectraxis

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROJECT_PROPOSAL.md  README.md  alembic.ini  pyproject.toml
.claude/plans/: wise-sauteeing-plum.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatPanel.tsx  NavBar.tsx
frontend/src/pages/: PromptsPage.tsx  WorkflowBuilderPage.tsx  WorkflowsPage.tsx
src/vectraxis/: config.py
src/vectraxis/agents/: base.py  llm_providers.py  pipeline.py  provider_registry.py  router.py
src/vectraxis/api/: app.py  data_source_registry.py  dependencies.py
src/vectraxis/db/: base.py  models.py  session.py
src/vectraxis/evaluation/: experiments.py  metrics.py  runner.py
src/vectraxis/ingestion/: loaders.py  normalizers.py  registry.py
src/vectraxis/models/: __init__.py  agent.py  common.py  evaluation.py  ingestion.py  prompt.py  retrieval.py  validation.py  workflow.py
src/vectraxis/observability/: logging.py  metrics.py  tracing.py
src/vectraxis/retrieval/: __init__.py  chunking.py  embeddings.py  rag.py  vector_store.py
src/vectraxis/validation/: grounding.py  validators.py
src/vectraxis/workflows/: engine.py
tests/: conftest.py
tests/fixtures/: sample.csv  sample.json  sample.txt
tests/unit/: test_config.py
tests/unit/agents/: test_base.py  test_llm_providers.py  test_pipeline.py  test_provider_registry.py  test_router.py  test_specialized.py
(+76 files in other folders)
